Fixes stash node icon alignment

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -366,3 +366,7 @@ a {
 		display: none;
 	}
 }
+
+.graph-container .node.stash-node .graph-icon {
+	transform: translateY(-2px);
+}
